Add pre-run cost estimator
